# pickcard-

./: CMakeLists.txt  main.cpp
base/: Base.cpp  Base.h  Result.cpp  Result.h
card/: Blue.cpp  Blue.h  DarkRed.cpp  DarkRed.h  Green.cpp  Green.h  Red.cpp  Red.h
files/: card.txt
utilities/: Play.cpp  Play.h  ReadWriteFile.cpp  ReadWriteFile.h
